[gd_scene load_steps=12 format=3 uid="uid://dsq0eimp2b0ew"]

[ext_resource type="Theme" uid="uid://dl3bjftyd617t" path="res://font.tres" id="1_4jm05"]
[ext_resource type="Script" path="res://Scenes/Perguntas/control.gd" id="1_uqnuk"]
[ext_resource type="Texture2D" uid="uid://d311apviba8vu" path="res://GUI-ezgif.com-crop.png" id="3_71fd8"]
[ext_resource type="Texture2D" uid="uid://bgfqkrvpbm2w4" path="res://assets/Icons/h.png" id="4_2hww3"]
[ext_resource type="Texture2D" uid="uid://byu27kfak8xaf" path="res://assets/Icons/j.png" id="5_si1vo"]
[ext_resource type="Texture2D" uid="uid://b0ve0plswe51u" path="res://assets/Icons/k.png" id="6_0pdty"]
[ext_resource type="Texture2D" uid="uid://hxteykyin4f7" path="res://assets/Icons/l.png" id="7_rtys6"]

[sub_resource type="Theme" id="Theme_g4wli"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tbaxl"]
texture = ExtResource("3_71fd8")
texture_margin_left = 24.0
texture_margin_top = 24.0
texture_margin_right = 24.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dlsos"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cindh"]

[node name="Control" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_uqnuk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="Holder_Rosa" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme = SubResource("Theme_g4wli")

[node name="PerguntaRosa" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/Holder_Rosa"]
layout_mode = 2
theme = ExtResource("1_4jm05")
theme_override_styles/normal = SubResource("StyleBoxTexture_tbaxl")
text = "adia
af"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/Holder_Rosa"]
layout_mode = 2

[node name="resp1" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Holder_Rosa/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4jm05")
theme_override_icons/icon = ExtResource("4_2hww3")
text = "btn1
"

[node name="resp2" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Holder_Rosa/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4jm05")
theme_override_icons/icon = ExtResource("5_si1vo")
text = "btn2
"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/MarginContainer/Holder_Rosa"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_dlsos")

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/Holder_Rosa"]
layout_mode = 2

[node name="resp3" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Holder_Rosa/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4jm05")
theme_override_icons/icon = ExtResource("6_0pdty")
text = "btn1
"

[node name="resp4" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Holder_Rosa/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4jm05")
theme_override_icons/icon = ExtResource("7_rtys6")
text = "btn2
"

[node name="Holder_Azul" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Holder_Azul"]
layout_mode = 2
theme = ExtResource("1_4jm05")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Holder_Azul"]
layout_mode = 2

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/Holder_Azul/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4jm05")
text = "btn1
"

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Holder_Azul/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4jm05")
text = "btn2
"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/Holder_Azul"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_dlsos")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Holder_Azul"]
layout_mode = 2

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer/Holder_Azul/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4jm05")
text = "btn1
"

[node name="Button4" type="Button" parent="MarginContainer/HBoxContainer/Holder_Azul/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4jm05")
text = "btn2
"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_cindh")
